1.update readme documentation 2.add soft leak app for analyzing it with VisualVm and Memory Analyzer tools